# belo_horizonte_paper

./: .gitignore  01_generate_elevation_raster.ipynb  02_generate_sample_points.py  03_marimo_test.py  main.py  pyproject.toml  test.py
belo_horizonte_paper/: bounds.py  constants.py  temperature.py  utils.py
