[project]
name = "belo-horizonte-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earthengine-api>=1.7.29",
    "esda>=2.9.0",
    "geemap>=0.37.3",
    "geopandas>=1.1.3",
    "libpysal>=4.14.1",
    "marimo[mcp]>=0.23.9",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "seaborn>=0.13.2",
    "spreg>=1.9.0",
    "statsmodels>=0.14.6",
    "types-geopandas>=1.1.3.20260518",
    "xarray>=2026.4.0",
    "xarray-spatial>=0.10.3",
]

[tool.marimo.language_servers.ty]
enabled = true
